changed repo blog-comments - > markdownBlog

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -329,12 +329,13 @@
                             </ul>
                           </s_rp_container>
                     <div class="article-reply">
-											<script src="https://utteranc.es/client.js"
-        repo="Shane-Park/blog-comments"
+	<script src="https://utteranc.es/client.js"
+        repo="Shane-Park/markdownBlog"
         issue-term="pathname"
-        theme="github-dark"
+        theme="preferred-color-scheme"
         crossorigin="anonymous"
         async>
+</script>
 </script>													
                         </div>
                         <!-- // area-reply -->
