--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -3,10 +3,13 @@
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-78XZFQGFTN"></script>
-	<!-- font awesome -->
-	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
-<script>
-  window.dataLayer = window.dataLayer || [];
+
+	<!-- font Awesome -->
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
+	<!-- line awesome -->
+<link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
+<script> 
+	window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
@@ -54,7 +57,7 @@
 	}
 </script>	
 <button id="darkBtn" class="btns h_pointer">
-	<i class="far fa-moon"></i>
+	<i class="las la-cloud-moon"></i>
 </button>
 <button id="upBtn" class="btns h_pointer">
 	<i class="fas fa-arrow-up"></i>
@@ -1037,15 +1040,19 @@ $(function(){
 			setDark();	
 			localStorage.setItem("isDarkMode", true);
 		}else{
-			$('body').removeClass('dark');			
-			$('#tt-body-page').removeClass('dark');
+			setNonDark();
 			localStorage.setItem("isDarkMode", false);
 		}
 	})					
 })
 function setDark(){
 	$('body').addClass('dark');
-	$('#tt-body-page').addClass('dark');																			 
+	$('#tt-body-page').addClass('dark');																			$('.la-cloud-moon').removeClass('la-cloud-moon').addClass('la-sun');
+}
+function setNonDark(){
+	$('body').removeClass('dark');																			 
+  $('#tt-body-page').removeClass('dark');
+	$('.la-sun').removeClass('la-sun').addClass('la-cloud-moon');																 
 }
 </script>
 
