코드블럭에 라인 넘버 추가

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -3,7 +3,15 @@
 <head>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-78XZFQGFTN"></script>
-
+	
+	<!-- highlight.js -->
+<link rel="stylesheet"  href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/styles/default.min.css">
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/11.3.1/highlight.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/highlightjs-line-numbers.js/2.8.0/highlightjs-line-numbers.min.js"></script>
+		<script>
+			hljs.initLineNumbersOnLoad();
+			hljs.initHighlightingOnLoad();
+		</script>
 	<!-- font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.11.2/css/all.css">
 	<!-- line awesome -->
