출력 표기 연/월/일로 통일

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -207,7 +207,7 @@
 										</a>
 										<div class="box-meta">
 											<a href="[##_list_rep_category_link_##]" class="link-category">[##_list_rep_category_##]</a>
-											<span class="date">[##_list_rep_regdate_##]</span>
+											<span class="date">[##_list_rep_date_year_##].[##_list_rep_date_month_##].[##_list_rep_date_day_##]</span>
 											<span class="reply">
 												<s_rp_count>[##_list_rep_rp_cnt_##]</s_rp_count>
 											</span>
