--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -370,14 +370,25 @@
                             </ul>
                           </s_rp_container>
                     <div class="article-reply">
-	<script src="https://utteranc.es/client.js"
+											<!--
+<script src="https://utteranc.es/client.js"
         repo="Shane-Park/markdownBlog"
         issue-term="pathname"
         theme= "github-light"
         crossorigin="anonymous"
         async>
-</script>
-</script>													
+</script>									 -->
+<script>											
+let script = document.createElement('script');	
+script.setAttribute('src',"https://utteranc.es/client.js");
+script.setAttribute('repo',"Shane-Park/markdownBlog");
+script.setAttribute('issue-term',"pathname");
+let theme = "github-" + (isDarkMode ? "dark":"light");
+script.setAttribute('theme', theme);
+script.crossorigin="anonymous";
+script.addAttribute="async";
+document.querySelector(".article-reply").append(script);
+</script>											
                         </div>
                         <!-- // area-reply -->
 
@@ -1057,13 +1068,21 @@ $(function(){
 // darkMode 토글
 	$('.wrapper .switch').on('change', function(){
 		let isDarkMode = $(this).is(":checked");
+		let utte = $('.utterances iframe');
+		let utteSrc = utte.attr('src');
+		let modeBefore = isDarkMode ? "github-light" : "github-dark";
+		let modeAfter = isDarkMode ? "github-dark" : "github-light";
+		if(utteSrc) {
+		  let newSrc = utteSrc.replace(modeBefore, modeAfter);
+		  utte.attr("src", newSrc)
+		}
 		if(isDarkMode){
 			setDark();	
 			localStorage.setItem("isDarkMode", true);
 		}else{
 			setNonDark();
 			localStorage.setItem("isDarkMode", false);
-		}																					
+		}																
 	})
 																			 
 // 스크롤 top버튼 숨기고 보이기
@@ -1084,25 +1103,12 @@ function setDark(){
 	$('body').addClass('dark');
 	$('#tt-body-page').addClass('dark');
 	$('.wrapper .switch').prop("checked", true);	
-	setTimeout(function(){
-		let utte = $('.utterances iframe');
-		let utteSrc = utte.attr('src');															
-		if(utteSrc) {
-		  let newSrc = utteSrc.replace("github-light", "github-dark");
-		  utte.attr("src", newSrc)
-		}								 
-		}, 300);															 
+						 
 }
 function setNonDark() {
 	$('body').removeClass('dark');																			 
   $('#tt-body-page').removeClass('dark');
-	$('.wrapper .switch').prop("checked", false);	
-		let utte = $('.utterances iframe');
-		let utteSrc = utte.attr('src');								 
-		if(utteSrc) { 
-			let newSrc = utteSrc.replace("github-dark", "github-light");
-			utte.attr("src", newSrc);					 
-		}								 
+	$('.wrapper .switch').prop("checked", false);						 
 }
 function getModifiedDate(){ 
     let metaTags = document.getElementsByTagName( "META" ); 
