moved buttons to left side

--- a/blogskin/html.html
+++ b/blogskin/html.html
@@ -67,14 +67,12 @@
 			<i class="fas fa-arrow-up"></i>
 		</button>
 	</div>
-	
-	<!-- TOC 영역 -->
-	<div class="js-toc toc"></div>
-	
 	<!-- dark toggle -->
-	<div class="wrapper">
+	<div id="darkModeBtn" class="wrapper">
 		<input type="checkbox" name="checkbox" class="switch">
 	</div>
+	<!-- TOC 영역 -->
+	<div class="js-toc toc"></div>
   <s_t3>
 		
     <!-- 사이드바 서랍형일때 wrap-right / wrap-drawer -->
